--- a/index.html
+++ b/index.html
@@ -487,8 +487,262 @@
           </div>
         </div>
       </div>
-      <div id="announcements"></div>
-      <div id="trending"></div>
+      <div id="announcements">
+        <div>Announcements</div>
+        <div class="announcementCard">
+          <div class="underline">
+            <h1>Site Maintenance</h1>
+            <p>
+              Vestibulum condimentum tellus factus, in acumasan elit macisumus
+              ac. Donec hendrereit sodrales congue...
+            </p>
+          </div>
+          <div class="underline">
+            <h1>Site Maintenance</h1>
+            <p>
+              Vestibulum condimentum tellus factus, in acumasan elit macisumus
+              ac. Donec hendrereit sodrales congue...
+            </p>
+          </div>
+          <div class="underline" id="noBorder">
+            <h1>Site Maintenance</h1>
+            <p>
+              Vestibulum condimentum tellus factus, in acumasan elit macisumus
+              ac. Donec hendrereit sodrales congue...
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="announcements">
+        <div>Trending Now</div>
+        <div class="announcementCard" id="profCard">
+          <div class="prof">
+            <svg
+              width="800px"
+              height="800px"
+              viewBox="0 0 64 64"
+              enable-background="new 0 0 64 64"
+              id="Layer_1"
+              version="1.1"
+              xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <g>
+                <g>
+                  <circle cx="32" cy="32" fill="#ED80A7" r="30" />
+                </g>
+              </g>
+
+              <g>
+                <path
+                  d="M42.6,15.1H21.4c-1.1,0-2-0.9-2-2v-0.6c0-1.1,0.9-2,2-2h21.3c1.1,0,2,0.9,2,2v0.6   C44.6,14.2,43.7,15.1,42.6,15.1z"
+                  fill="#54321F"
+                />
+              </g>
+
+              <g>
+                <path
+                  d="M45.9,26.1v22.5c0,1.7-1.4,3.1-3.1,3.1H21.2c-1.7,0-3.1-1.4-3.1-3.1V26.1c0-2.1,0.7-3.9,1.9-5.4   c1-1.2,2.3-2.2,3.8-2.7v-2.8h16.3V18C43.5,19.2,45.9,22.4,45.9,26.1z"
+                  fill="#E8E5E6"
+                />
+              </g>
+
+              <g>
+                <g>
+                  <ellipse
+                    cx="32.9"
+                    cy="31.6"
+                    fill="#49200C"
+                    rx="4.8"
+                    ry="8"
+                    transform="matrix(0.2167 -0.9762 0.9762 0.2167 -5.078 56.8863)"
+                  />
+                </g>
+
+                <g>
+                  <path
+                    d="M25.1,29.9c0,0,11.3,5.1,15.5,3.4c0,0-2.8-0.5-5.7-2.1C32,29.6,26.5,28.1,25.1,29.9z"
+                    fill="#8E5E46"
+                  />
+                </g>
+              </g>
+
+              <g>
+                <g>
+                  <ellipse
+                    cx="26.5"
+                    cy="41.7"
+                    fill="#49200C"
+                    rx="5.8"
+                    ry="3.5"
+                    transform="matrix(0.8547 -0.5192 0.5192 0.8547 -17.7917 19.7941)"
+                  />
+                </g>
+
+                <g>
+                  <path
+                    d="M21.5,44.7c0,0,8.4-3,9.8-6c0,0-1.7,1.1-4,1.8C25,41.1,21.3,43,21.5,44.7z"
+                    fill="#8E5E46"
+                  />
+                </g>
+              </g>
+
+              <g>
+                <g>
+                  <ellipse
+                    cx="38.4"
+                    cy="43.4"
+                    fill="#49200C"
+                    rx="3.8"
+                    ry="6.3"
+                    transform="matrix(0.6895 -0.7243 0.7243 0.6895 -19.5156 41.3082)"
+                  />
+                </g>
+
+                <g>
+                  <path
+                    d="M33.9,39.1c0,0,5.5,8,9.1,8.6c0,0-1.7-1.4-3-3.7C38.6,41.7,35.5,38.4,33.9,39.1z"
+                    fill="#8E5E46"
+                  />
+                </g>
+              </g>
+
+              <g opacity="0.25">
+                <path
+                  d="M45.9,26.1v20.4L20,20.7c1-1.2,2.3-2.2,3.8-2.7v-2.8h16.3V18C43.5,19.2,45.9,22.4,45.9,26.1z"
+                  fill="#D8D8D7"
+                />
+              </g>
+            </svg>
+            <div class="wrapper">
+              <h1>@bean</h1>
+              <p>Thrift Shop Lover</p>
+            </div>
+          </div>
+          <div class="prof">
+            <svg
+              id="profilePic2"
+              viewBox="0 0 61.7998 61.7998"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title />
+              <g data-name="Layer 2" id="Layer_2">
+                <g data-name="—ÎÓÈ 1" id="_ÎÓÈ_1">
+                  <circle
+                    cx="30.8999"
+                    cy="30.8999"
+                    fill="#58b0e0"
+                    r="30.8999"
+                  />
+                  <path
+                    d="M23.255 38.68l15.907.146v15.602l-15.907-.147V38.68z"
+                    fill="#302e33"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M53.478 51.993A30.813 30.813 0 0 1 30.9 61.8a31.225 31.225 0 0 1-3.837-.237A34.072 34.072 0 0 1 15.9 57.919a31.036 31.036 0 0 1-7.857-6.225l1.284-3.1 13.925-6.212c0 4.535 1.31 10.02 7.439 10.113 7.57.113 8.47-5.475 8.47-10.15l12.79 6.282z"
+                    fill="#857a6e"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M31.462 52.495c-3.342-5.472-9.388-6.287-11.359-6.6-5.42-.86-14.56-4.28-8.564-9.72 10.765-9.764 6.898-22.032 19.513-22.032 13.47 0 8.873 12.268 19.638 22.032 5.997 5.44-3.143 8.86-8.565 9.72a14.292 14.292 0 0 0-10.663 6.6z"
+                    fill="#302e33"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M39.964 42.252c-1.125 4.01-4.008 6.397-8.598 6.207-3.94-.163-7.297-2.397-8.11-6.204z"
+                    fill-rule="evenodd"
+                    opacity="0.18"
+                  />
+                  <path
+                    d="M31.129 8.432c21.281 0 12.987 35.266 0 35.266-12.267 0-21.281-35.266 0-35.266z"
+                    fill="#ffe8be"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M18.365 24.045c-3.07 1.34-.46 7.687 1.472 7.658a31.973 31.973 0 0 1-1.472-7.658z"
+                    fill="#f9dca4"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M44.14 24.045c3.07 1.339.46 7.687-1.471 7.658a31.993 31.993 0 0 0 1.471-7.658z"
+                    fill="#f9dca4"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M19.113 25.706c-2.83-4.958-2.783-9.375-1.362-11.817 2.048-3.52 4.922-3.688 5.315-4.517 4.025-8.479 24.839-2.048 23.97 11.09a14.798 14.798 0 0 0-1.522-2.486s-.075 4.991-1.437 6.957c-1.64.464-15.061.239-20.053-9.948-4.006 2.268-5.06 7.015-4.91 10.72z"
+                    fill="#969696"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M31.15 46.543c-2.66.022-15.617-4.022-12.61-26.045 0 0 .65 9.916 2.775 12.788 1.382 1.868 2.625 2.57 3.82.746 1.248-1.9 3.946-3.473 6.038-1.677 1.737-1.85 4.848-.212 6.084 1.677 1.195 1.823 2.44 1.123 3.822-.746 2.125-2.872 2.586-12.456 2.586-12.456 3.456 23.6-9.855 25.735-12.515 25.713z"
+                    fill="#969696"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M26.527 36.802a7.118 7.118 0 0 1 4.568-2.096 7.29 7.29 0 0 1 4.503 2.099c-.788.525-5.874 1.737-9.071-.003z"
+                    fill="#ffe8be"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M26.611 51.297a29.35 29.35 0 0 0-8.171-3.501c-4.778-.758-13.423-1.518-11.271-10.086C12.023 18.38 18.85 3.688 31.457 3.87c12.836.184 19.09 15.8 23.84 33.865 1.904 7.238-6.79 9.313-11.508 10.06A21.129 21.129 0 0 0 36 51.14c-6.963 4.765-1.812 4.7-9.389.158zm4.851 1.198a14.292 14.292 0 0 1 10.663-6.6c5.422-.86 14.562-4.28 8.565-9.72-10.765-9.764-6.167-22.032-19.638-22.032-12.615 0-8.748 12.268-19.513 22.032-5.997 5.44 3.143 8.86 8.564 9.72 1.97.313 8.017 1.127 11.36 6.6z"
+                    fill="#7d7062"
+                    fill-rule="evenodd"
+                  />
+                  <path
+                    d="M24.202 50.213s5.988 3.256 7.588 7.992c1.61-5.121 7.627-8.327 7.627-8.327S33.07 52.33 31.7 55.534c-.973-1.722-2.707-3.4-7.497-5.321z"
+                    fill="#302e33"
+                    fill-rule="evenodd"
+                  />
+                </g>
+              </g>
+            </svg>
+            <div class="wrapper">
+              <h1>@hunter</h1>
+              <p>Future Developer</p>
+            </div>
+          </div>
+          <div class="prof">
+            <svg
+              width="800px"
+              height="800px"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M21 16.5C21 18.433 19.433 20 17.5 20C15.567 20 14 18.433 14 16.5C14 14.567 15.567 13 17.5 13C19.433 13 21 14.567 21 16.5Z"
+                fill="#1C274C"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M1.25 10C1.25 9.58579 1.58579 9.25 2 9.25H22C22.4142 9.25 22.75 9.58579 22.75 10C22.75 10.4142 22.4142 10.75 22 10.75H2C1.58579 10.75 1.25 10.4142 1.25 10Z"
+                fill="#1C274C"
+              />
+              <path
+                opacity="0.5"
+                d="M4.1875 9.25L4.6138 7.54479C5.15947 5.36211 5.43231 4.27077 6.24609 3.63538C7.05988 3 8.1848 3 10.4347 3H13.5653C15.8152 3 16.9401 3 17.7539 3.63538C18.5677 4.27077 18.8405 5.36211 19.3862 7.54479L19.8125 9.25H4.1875Z"
+                fill="#1C274C"
+              />
+              <path
+                d="M10 16.5C10 18.433 8.433 20 6.5 20C4.567 20 3 18.433 3 16.5C3 14.567 4.567 13 6.5 13C8.433 13 10 14.567 10 16.5Z"
+                fill="#1C274C"
+              />
+              <path
+                opacity="0.5"
+                d="M9.88379 17.3966C9.9594 17.1104 9.99968 16.8099 9.99968 16.5C9.99968 16.2272 9.96845 15.9616 9.90939 15.7067L10.323 15.4999C11.3787 14.972 12.6214 14.972 13.6771 15.4999L14.09 15.7064C14.0309 15.9614 13.9997 16.227 13.9997 16.5C13.9997 16.8098 14.0399 17.1101 14.1155 17.3961L13.0063 16.8415C12.3728 16.5248 11.6273 16.5248 10.9938 16.8415L9.88379 17.3966Z"
+                fill="#1C274C"
+              />
+            </svg>
+            <div class="wrapper">
+              <h1>@anon</h1>
+              <p>Always watching...</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
