Take away some gaps

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           </div>
         </div>
       </div>
-      <div id="announcements">
+      <div class="announcements">
         <div>Announcements</div>
         <div class="announcementCard">
           <div class="underline">
@@ -513,7 +513,7 @@
           </div>
         </div>
       </div>
-      <div id="announcements">
+      <div class="announcements" id="noMargin">
         <div>Trending Now</div>
         <div class="announcementCard" id="profCard">
           <div class="prof">
